--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -15,6 +15,8 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NHotkey" version="1.2.1" targetFramework="net461" />
+  <package id="NHotkey.WindowsForms" version="1.2.1" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.2-alpha2" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.7.1" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.7.1" targetFramework="net461" />
