--- a/WolvenKit/packages.config
+++ b/WolvenKit/packages.config
@@ -4,6 +4,7 @@
   <package id="CircularProgressBar" version="2.5.6403.13419" targetFramework="net461" />
   <package id="CyotekImageBox" version="1.3.0-Alpha1" targetFramework="net461" />
   <package id="DevZH.FlatBuffers" version="1.4.0" targetFramework="net461" />
+  <package id="Dfust.Hotkeys" version="1.2.6206.24906" targetFramework="net461" />
   <package id="doboz4net" version="1.0.1" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net461" />
   <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net461" />
@@ -13,10 +14,9 @@
   <package id="MarkerMetro.Unity.Ionic.Zlib" version="2.0.0.14" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="MouseKeyHook" version="5.4.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NHotkey" version="1.2.1" targetFramework="net461" />
-  <package id="NHotkey.WindowsForms" version="1.2.1" targetFramework="net461" />
   <package id="ObjectListView.Official" version="2.9.2-alpha2" targetFramework="net461" />
   <package id="OpenGL.Net" version="0.7.1" targetFramework="net461" />
   <package id="OpenGL.Net.WinForms" version="0.7.1" targetFramework="net461" />
