Added CSectorData support. CSectorData bytes are now read properly, which allows for very basic editing.

--- a/WolvenKit.CR2W/WolvenKit.CR2W.csproj
+++ b/WolvenKit.CR2W/WolvenKit.CR2W.csproj
@@ -117,6 +117,7 @@
     </Compile>
     <Compile Include="Types\CCubeTexture.cs" />
     <Compile Include="Types\CRagdoll.cs" />
+    <Compile Include="Types\CSectorData.cs" />
     <Compile Include="Types\CSwfTexture.cs" />
     <Compile Include="Types\CTree.cs" />
     <Compile Include="HslColor.cs" />
